# GFF3-LTR-Mapper

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  ZENODO_README.md  pyproject.toml  scaffold_lengths.tsv
docs/: EXAMPLES.md  USAGE.md
gff3_ltr_map/: __init__.py  aggregates.py  average_map.py  batch.py  cli.py  model.py  parser.py  render_ascii.py  render_svg.py  scientist_view.py  summary.py
runs/default_sweep/: identity_bins.tsv
runs/default_sweep/identity_postcards/: chr_10_0_980.txt  chr_10_all.txt  chr_1_0_980.txt  chr_1_all.txt  chr_2_0_980.txt  chr_2_all.txt  chr_3_0_980.txt  chr_3_all.txt  chr_4_0_980.txt  chr_4_all.txt  chr_5_0_980.txt  chr_5_all.txt  chr_6_0_980.txt  chr_6_all.txt  chr_7_0_980.txt  chr_7_all.txt  chr_8_0_980.txt  chr_8_all.txt  chr_9_0_980.txt  chr_9_all.txt  genome_0_980.txt  genome_all.txt  scaffold_17_0_980.txt  scaffold_17_all.txt  scaffold_18_0_980.txt  scaffold_18_all.txt
tests/: conftest.py  test_cli_example.py  test_parser.py  test_real_data_integration.py
tests/data/: sample_edta_chr2.gff3
verified_output/: cross_species_primary_window_1_3000000.tsv
