[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GFF3-LTR-Mapper"
version = "0.1.0"
description = "ASCII and SVG mini-maps for EDTA intact LTR elements from GFF3"
readme = "README.md"
authors = [{name = "ViroDyn Ltd"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "svgwrite>=1.4.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.11",
  "ruff>=0.6.8",
  "types-requests"
]

[project.scripts]
gff3-ltr-map = "gff3_ltr_map.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gff3_ltr_map*"]
exclude = ["runs*", "out*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
