[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GFF3-LTR-Mapper"
version = "0.3.0"
description = "QC, summarisation, and region-scale comparison of EDTA intact LTR GFF3 annotations"
readme = "README.md"
authors = [{name = "ViroDyn Ltd"}]
license = "MIT"
requires-python = ">=3.9"
keywords = ["transposable-elements", "LTR", "EDTA", "GFF3", "bioinformatics", "genomics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "svgwrite>=1.4.3"
]

[project.urls]
Homepage = "https://github.com/ViroDyn-Ltd/GFF3-LTR-Mapper"
Repository = "https://github.com/ViroDyn-Ltd/GFF3-LTR-Mapper"
Issues = "https://github.com/ViroDyn-Ltd/GFF3-LTR-Mapper/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.11",
  "ruff>=0.6.8",
  "types-requests"
]

[project.scripts]
gff3-ltr-map = "gff3_ltr_map.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gff3_ltr_map*"]
exclude = ["runs*", "out*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
  "integration: tests that exercise external real-data inputs",
]
